# ChococakeBot

./: LICENSE  README.md
bwapi_bin/: clearbw.sh  inf.sh  startselfgame_gui.sh  startselfgame_nogui.sh
bwapi_bin/bwapi-data/: bwapi.ini
docker/openbw/: openbw_build.sh  openbw_gui_guide.sh  openbw_ssh_guide.sh
docker/openbw/openbw/: Dockerfile
linux/: CMakeLists.txt
linux/include/: BuildManager.h  BuildOrderQueue.h  CommandUtil.h  Common.h  Config.h  ConstructionManager.h  ConstructionPlaceFinder.h  ConstructionTask.h  GameCommander.h  InformationManager.h  MapTools.h  MetaType.h  MyBotModule.h  ScoutManager.h  StrategyManager.h  UXManager.h  UnitData.h  WorkerData.h  WorkerManager.h
linux/src/: BuildManager.cpp  BuildOrderQueue.cpp  CommandUtil.cpp  Common.cpp  Config.cpp  ConstructionManager.cpp  ConstructionPlaceFinder.cpp  ConstructionTask.cpp  Dll.cpp  GameCommander.cpp  InformationManager.cpp  MapTools.cpp  MetaType.cpp  MyBotModule.cpp  ScoutManager.cpp  StrategyManager.cpp  UXManager.cpp  UnitData.cpp  WorkerData.cpp  WorkerManager.cpp
windows/: BasicBot.sln
windows/BasicBot/: CommandUtil.cpp  Common.cpp  Common.h  Config.cpp  ConstructionManager.cpp  GameCommander.cpp  MyBotModule.cpp  MyBotModule.h  StrategyManager.cpp  StrategyManager.h  UXManager.cpp  UnitData.cpp  WorkerData.cpp  WorkerManager.cpp  chococake.cbp
windows/Release/BasicBot/BasicBot.tlog/: BasicBot.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
